deploy/hackathon/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: halvor
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8080": "http-backend"}}'
spec:
  ingressClassName: gce
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: halvor
                port:
                  number: 8080
